changed calculation of cashBalance